<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/helloText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:text="@string/hello_text"
        android:textSize="@dimen/big_text_size"
        app:layout_constraintBottom_toTopOf="@+id/simpleCalculatorBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/advancedCalculatorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_calculator_btn"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/aboutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simpleCalculatorBtn" />

    <Button
        android:id="@+id/simpleCalculatorBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/simple_calculator_btn"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/advancedCalculatorBtn"
        app:layout_constraintEnd_toEndOf="@+id/advancedCalculatorBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/advancedCalculatorBtn"
        app:layout_constraintTop_toBottomOf="@+id/helloText" />

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/about_btn"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toTopOf="@+id/exitBtn"
        app:layout_constraintEnd_toEndOf="@+id/advancedCalculatorBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/advancedCalculatorBtn"
        app:layout_constraintTop_toBottomOf="@+id/advancedCalculatorBtn" />

    <Button
        android:id="@+id/exitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/exit_btn"
        android:textSize="@dimen/medium_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/aboutBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/aboutBtn"
        app:layout_constraintTop_toBottomOf="@+id/aboutBtn" />

</android.support.constraint.ConstraintLayout>